--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBL Speaker - by 4170</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+    body {
+        font-family: 'Montserrat', sans-serif;
+        background-color: #121212;
+        color: white;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    header {
+        background: #1f1f1f;
+        padding: 20px;
+        font-size: 24px;
+    }
+
+    button {
+        position: absolute;
+        top: 50%;
+        right: 10%;
+        transform: translateY(-50%);
+        background: #ff5722;
+        color: white;
+        border: none;
+        padding: 15px 25px;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: 0.3s;
+    }
+
+    button:hover {
+        background: #e64a19;
+    }
+</style>
 </head>
 <body>
 
