--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>JBL Speaker - by 4170</title>
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
         body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #121212;
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(to bottom, #1a1a2e, #16213e, #0f3460);
             color: white;
             text-align: center;
             margin: 0;
@@ -19,9 +20,13 @@
         }
 
         header {
-            background: #1f1f1f;
+            font-family: 'Press Start 2P', cursive;
+            background: #ff0080;
+            color: white;
             padding: 20px;
-            font-size: 24px;
+            font-size: 20px;
+            text-shadow: 2px 2px 5px #000;
+            border-bottom: 5px solid #ffbf00;
         }
 
         .audio-controls {
@@ -32,13 +37,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: #333;
+            background: rgba(0, 0, 0, 0.6);
             padding: 20px;
             border-radius: 10px;
+            border: 2px solid #ffbf00;
         }
 
         button {
-            background: #ff5722;
+            background: #ff0080;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -50,37 +56,58 @@
         }
 
         button:hover {
-            background: #e64a19;
+            background: #ffbf00;
         }
 
         input[type="range"] {
             width: 150px;
             margin-top: 10px;
+            accent-color: #ffbf00;
         }
 
-        .visualizer {
+        /* Rotating Record */
+        .record-container {
             position: absolute;
-            top: 0;
-            width: 10px;
-            height: 100vh;
-            background: linear-gradient(to top, #ff5722, transparent);
-            opacity: 0.7;
+            top: 50%;
+            left: 10%;
+            transform: translateY(-50%);
         }
 
-        .left-bar {
-            left: 5%;
+        .record {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            background: url('record.png') no-repeat center/cover;
+            transition: transform 0.2s ease-out;
         }
 
-        .right-bar {
-            right: 5%;
+        /* Visualizer */
+        .visualizer-container {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 5px;
+        }
+
+        .bar {
+            width: 15px;
+            height: 10px;
+            background: red;
+            transition: height 0.1s, background 0.3s;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>JBL Speaker - by 4170</h1>
+        JBL Speaker - by 4170
     </header>
+
+    <div class="record-container">
+        <div class="record" id="record"></div>
+    </div>
 
     <div class="audio-controls">
         <button id="playPauseButton">Play</button>
@@ -89,25 +116,29 @@
 
     <audio id="audio" src="sound.mp3"></audio>
 
-    <div class="visualizer left-bar"></div>
-    <div class="visualizer right-bar"></div>
+    <div class="visualizer-container" id="visualizer"></div>
 
     <script>
         const audio = document.getElementById('audio');
         const playPauseButton = document.getElementById('playPauseButton');
         const seekBar = document.getElementById('seekBar');
-        const visualizerBars = document.querySelectorAll('.visualizer');
+        const record = document.getElementById('record');
+        const visualizer = document.getElementById('visualizer');
 
+        // Play/Pause and Record Rotation
         playPauseButton.addEventListener('click', function() {
             if (audio.paused) {
                 audio.play();
                 playPauseButton.textContent = 'Pause';
+                record.style.animation = "spin 3s linear infinite";
             } else {
                 audio.pause();
                 playPauseButton.textContent = 'Play';
+                record.style.animation = "";
             }
         });
 
+        // Seek Bar Update
         audio.addEventListener('timeupdate', function() {
             seekBar.max = audio.duration;
             seekBar.value = audio.currentTime;
@@ -117,25 +148,35 @@
             audio.currentTime = seekBar.value;
         });
 
-        // Simple Visualizer Effect
+        // Visualizer Setup
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
         const analyser = audioContext.createAnalyser();
         const source = audioContext.createMediaElementSource(audio);
         source.connect(analyser);
         analyser.connect(audioContext.destination);
-        analyser.fftSize = 64;
+        analyser.fftSize = 32;
 
         const bufferLength = analyser.frequencyBinCount;
         const dataArray = new Uint8Array(bufferLength);
 
+        // Create 10 bars
+        for (let i = 0; i < 10; i++) {
+            let bar = document.createElement('div');
+            bar.classList.add('bar');
+            visualizer.appendChild(bar);
+        }
+        const bars = document.querySelectorAll('.bar');
+
         function animateVisualizer() {
             requestAnimationFrame(animateVisualizer);
             analyser.getByteFrequencyData(dataArray);
-            const avgFreq = dataArray.reduce((a, b) => a + b, 0) / bufferLength;
-            const scale = Math.max(10, avgFreq / 2);
 
-            visualizerBars.forEach(bar => {
-                bar.style.height = `${scale}vh`;
+            bars.forEach((bar, index) => {
+                let value = dataArray[index * 2] / 2; // Scale down height
+                bar.style.height = `${value}px`;
+
+                // Rainbow colors
+                bar.style.background = `hsl(${(index * 36) + (value / 2)}, 100%, 50%)`;
             });
         }
 
@@ -145,6 +186,14 @@
             }
             animateVisualizer();
         };
+
+        // Record spinning animation
+        document.head.insertAdjacentHTML("beforeend", `<style>
+            @keyframes spin { 
+                from { transform: rotate(0deg); } 
+                to { transform: rotate(360deg); } 
+            }
+        </style>`);
     </script>
 
 </body>
