--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
         body {
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(to bottom, #1a1a2e, #16213e, #0f3460);
-            color: white;
+            font-family: 'Press Start 2P', cursive;
+            background: linear-gradient(to bottom, #2a2a2a, #1a1a1a);
+            color: #f5f5f5;
             text-align: center;
             margin: 0;
             padding: 0;
@@ -20,31 +19,54 @@
         }
 
         header {
-            font-family: 'Press Start 2P', cursive;
-            background: #ff0080;
-            color: white;
+            background: #111;
             padding: 20px;
-            font-size: 20px;
-            text-shadow: 2px 2px 5px #000;
-            border-bottom: 5px solid #ffbf00;
+            font-size: 24px;
+            text-shadow: 0px 0px 5px #ffcc00;
+        }
+
+        .record-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 150px;
+            height: 150px;
+        }
+
+        .record {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: url('record.png') no-repeat center center;
+            background-size: cover;
+            transition: transform 0.5s linear;
+        }
+
+        .spinning {
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
         }
 
         .audio-controls {
             position: absolute;
-            top: 50%;
-            right: 10%;
-            transform: translateY(-50%);
+            bottom: 100px;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
             flex-direction: column;
             align-items: center;
-            background: rgba(0, 0, 0, 0.6);
+            background: #333;
             padding: 20px;
             border-radius: 10px;
-            border: 2px solid #ffbf00;
         }
 
         button {
-            background: #ff0080;
+            background: #ff5722;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -56,53 +78,51 @@
         }
 
         button:hover {
-            background: #ffbf00;
+            background: #e64a19;
         }
 
         input[type="range"] {
             width: 150px;
             margin-top: 10px;
-            accent-color: #ffbf00;
         }
 
-        /* Rotating Record */
-        .record-container {
-            position: absolute;
-            top: 50%;
-            left: 10%;
-            transform: translateY(-50%);
-        }
-
-        .record {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            background: url('record.png') no-repeat center/cover;
-            transition: transform 0.2s ease-out;
-        }
-
-        /* Visualizer */
-        .visualizer-container {
+        .visualizer {
             position: absolute;
             bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            width: 100%;
+            height: 100px;
             display: flex;
-            gap: 5px;
+            justify-content: space-around;
+            align-items: flex-end;
         }
 
         .bar {
-            width: 15px;
+            width: 8%;
             height: 10px;
             background: red;
-            transition: height 0.1s, background 0.3s;
+            transition: height 0.1s ease, background 0.2s;
+        }
+
+        .spark {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background: white;
+            border-radius: 50%;
+            opacity: 0;
+            animation: sparkle 1s linear infinite;
+        }
+
+        @keyframes sparkle {
+            0% { transform: translateY(0) scale(1); opacity: 1; }
+            100% { transform: translateY(-50px) scale(0.5); opacity: 0; }
         }
     </style>
 </head>
 <body>
 
     <header>
-        JBL Speaker - by 4170
+        <h1>JBL Speaker - by 4170</h1>
     </header>
 
     <div class="record-container">
@@ -116,29 +136,35 @@
 
     <audio id="audio" src="sound.mp3"></audio>
 
-    <div class="visualizer-container" id="visualizer"></div>
+    <div class="visualizer" id="visualizer">
+        <div class="bar"></div><div class="bar"></div><div class="bar"></div>
+        <div class="bar"></div><div class="bar"></div><div class="bar"></div>
+        <div class="bar"></div><div class="bar"></div><div class="bar"></div>
+        <div class="bar"></div>
+    </div>
 
     <script>
         const audio = document.getElementById('audio');
         const playPauseButton = document.getElementById('playPauseButton');
         const seekBar = document.getElementById('seekBar');
         const record = document.getElementById('record');
+        const bars = document.querySelectorAll('.bar');
         const visualizer = document.getElementById('visualizer');
 
-        // Play/Pause and Record Rotation
         playPauseButton.addEventListener('click', function() {
             if (audio.paused) {
                 audio.play();
                 playPauseButton.textContent = 'Pause';
-                record.style.animation = "spin 3s linear infinite";
+                record.classList.add('spinning');
+                generateSparks();
             } else {
                 audio.pause();
                 playPauseButton.textContent = 'Play';
-                record.style.animation = "";
+                record.classList.remove('spinning');
+                removeSparks();
             }
         });
 
-        // Seek Bar Update
         audio.addEventListener('timeupdate', function() {
             seekBar.max = audio.duration;
             seekBar.value = audio.currentTime;
@@ -148,7 +174,7 @@
             audio.currentTime = seekBar.value;
         });
 
-        // Visualizer Setup
+        // Visualizer Effect
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
         const analyser = audioContext.createAnalyser();
         const source = audioContext.createMediaElementSource(audio);
@@ -158,25 +184,16 @@
 
         const bufferLength = analyser.frequencyBinCount;
         const dataArray = new Uint8Array(bufferLength);
-
-        // Create 10 bars
-        for (let i = 0; i < 10; i++) {
-            let bar = document.createElement('div');
-            bar.classList.add('bar');
-            visualizer.appendChild(bar);
-        }
-        const bars = document.querySelectorAll('.bar');
+        const colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'violet', 'cyan', 'magenta', 'white'];
 
         function animateVisualizer() {
             requestAnimationFrame(animateVisualizer);
             analyser.getByteFrequencyData(dataArray);
-
-            bars.forEach((bar, index) => {
-                let value = dataArray[index * 2] / 2; // Scale down height
-                bar.style.height = `${value}px`;
-
-                // Rainbow colors
-                bar.style.background = `hsl(${(index * 36) + (value / 2)}, 100%, 50%)`;
+            dataArray.forEach((value, index) => {
+                if (bars[index]) {
+                    bars[index].style.height = `${value / 2}px`;
+                    bars[index].style.background = colors[index % colors.length];
+                }
             });
         }
 
@@ -187,13 +204,21 @@
             animateVisualizer();
         };
 
-        // Record spinning animation
-        document.head.insertAdjacentHTML("beforeend", `<style>
-            @keyframes spin { 
-                from { transform: rotate(0deg); } 
-                to { transform: rotate(360deg); } 
+        // Spark Effect
+        function generateSparks() {
+            for (let i = 0; i < 20; i++) {
+                const spark = document.createElement('div');
+                spark.className = 'spark';
+                spark.style.left = `${Math.random() * 100}vw`;
+                spark.style.top = `${Math.random() * 100}vh`;
+                spark.style.animationDuration = `${Math.random() * 2 + 1}s`;
+                document.body.appendChild(spark);
             }
-        </style>`);
+        }
+
+        function removeSparks() {
+            document.querySelectorAll('.spark').forEach(spark => spark.remove());
+        }
     </script>
 
 </body>
